# ss13_chem

./: pyproject.toml
src/: analyze.py  automate.py  cli.py  reactions.py  reagent.py  secret.py
src/data/chemistry/: Chemistry-Holder.json  Chemistry-Machinery.json  Chemistry-Reagents.json  Chemistry-Recipes.json  Chemistry-Tools.json  Reagents-Base.json  Reagents-Diseases.json  Reagents-Drugs.json  Reagents-ExplosiveFire.json  Reagents-FoodDrink.json  Reagents-Medical.json  Reagents-Misc.json  Reagents-PoisonEtc.json  chemicompiler_core.json
src/data/chemistry/tools/: balloons.json  beakers.json  bombs.json  bottles.json  dispensers.json  droppers.json  emergency_injectors.json  extinguisher.json  food_and_drink.json  fuel_tanks.json  grenades.json  hyposprays.json  iv_drips.json  jars.json  patches.json  pills.json  sleepy_pen.json  stimpack.json  syringe_guns.json  syringes.json  vendor_items.json
src/data/current/chemistry/: Chemistry-Dispenser.json  Chemistry-Holder.json  Chemistry-Machinery.json  Chemistry-Reagents.json  Chemistry-Recipes.json  Chemistry-Tools.json  Reagents-Base.json  Reagents-Diseases.json  Reagents-Drugs.json  Reagents-ExplosiveFire.json  Reagents-FoodDrink.json  Reagents-Medical.json  Reagents-Misc.json  Reagents-Nuclear.json  Reagents-Organic.json  Reagents-PoisonEtc.json  chemicompiler_core.json
src/data/current/chemistry/tools/: ampoules.json  balloons.json  beakers.json  bombs.json  bottles.json  chemistry_hints.json  dispensers.json  emergency_injectors.json  extinguisher.json  food_and_drink.json  fuel_tanks.json  grenades.json  (+9 more)
