[tool.poetry]
name = "ss13_chem"
version = "0.1.0"
description = ""
authors = ["Kyle Oliver <oliverke@mail.uc.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
keyboard = "^0.13.5"
mouse = "^0.7.1"
click = "^8.1.3"
pywin32 = "^304"
beautifulsoup4 = "^4.11.1"
numpy = "^1.22.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
